--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "accessible-astro-starter",
-  "description": "An Accessible Starter Theme for Astro including several accessiblity features and tools to help you build faster.",
-  "version": "3.0.2",
-  "author": "Mark Teekman",
-  "homepage": "https://accessible-astro.netlify.app/",
+  "name": "YogiFood",
+  "description": "A Korean Street Food restaurant in Amiens, France.",
+  "version": "1.0.0",
+  "author": "Jimy Marletta",
+  "homepage": "https://agenceneodesign.com/",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
