--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   },
   "dependencies": {
     "sharp": "^0.33.2"
+  },
+  "resolutions": {
+    "astro/sharp": "0.33.1",
+    "astro-compress/sharp": "0.33.1"
   }
 }
