--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@typescript-eslint/parser": "^5.50.0",
     "accessible-astro-components": "^2.3.0",
     "astro": "^3.0.10",
-    "astro-compress": "^2.0.6",
+    "astro-compress": "2.2.7",
     "astro-icon": "^0.7.3",
     "eslint": "^8.33.0",
     "eslint-plugin-astro": "^0.23.0",
@@ -29,12 +29,5 @@
     "sass": "^1.49.9",
     "svgo": "^2.8.0",
     "tailwindcss": "^3.2.7"
-  },
-  "dependencies": {
-    "sharp": "^0.33.2"
-  },
-  "resolutions": {
-    "astro/sharp": "0.33.1",
-    "astro-compress/sharp": "0.33.1"
   }
 }
