--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "sass": "^1.49.9",
     "svgo": "^2.8.0",
     "tailwindcss": "^3.2.7"
+  },
+  "overrides": {
+    "astro/sharp": "0.33.1",
+    "astro-compress/sharp": "0.33.1"
   }
 }
