--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "svgo": "^2.8.0",
     "tailwindcss": "^3.2.7"
   },
-  "overrides": {
-    "astro/sharp": "0.33.1",
-    "astro-compress/sharp": "0.33.1"
+  "dependencies": {
+    "sharp": "^0.33.2"
   }
 }
