--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yogifood",
+  "name": "yogi",
   "description": "A Korean Street Food restaurant in Amiens, France.",
   "version": "1.0.0",
   "author": "Jimy Marletta",
